--- a/ru.taximaxim.codekeeper.mainapp/plugin_customization.ini
+++ b/ru.taximaxim.codekeeper.mainapp/plugin_customization.ini
@@ -7,6 +7,15 @@ org.eclipse.ui/DOCK_PERSPECTIVE_BAR=topRight
 # show progress on startup
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP=true
 
+# Welcome theme to use
+org.eclipse.ui.intro/INTRO_THEME = org.eclipse.ui.intro.universal.solstice
+
+# Root page links to show in the Universal Welcome
+org.eclipse.ui.intro.universal/INTRO_ROOT_PAGES = overview,tutorials,whatsnew,migrate
+
+# Initial page layout of the Universal Welcome
+org.eclipse.ui.intro.universal/INTRO_DATA = product:introData.xml
+
 # check for updates
 org.eclipse.equinox.p2.ui.sdk.scheduler/enabled=true
 org.eclipse.equinox.p2.ui.sdk.scheduler/schedule=on-fuzzy-schedule
