refactored maven build, versioning, updated plugins
update-versions.sh now updates root pom version, this updates <parent> in all modules
explicitly use internal profile when updating versions to update all files

deploy:
added a separate deploy pom
update site is now non-composite, old site version archives are deployed into github releases
deploy is the last stage of the build


use project.build.directory where appropriate
copy CLI launcher resource without content filtering
disabled default-install and default-deploy goals for all modules

--- a/ru.taximaxim.codekeeper.mainapp/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>ru.taximaxim.codeKeeper</groupId>
         <artifactId>ru.taximaxim.codeKeeper</artifactId>
-        <version>${global.version}</version>
+        <version>5.10.0-SNAPSHOT</version>
         <relativePath>ru.taximaxim.codeKeeper/</relativePath>
     </parent>
   
