--- a/ru.taximaxim.codekeeper.mainapp/feature/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/feature/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>ru.taximaxim.codeKeeper</groupId>
         <artifactId>ru.taximaxim.codeKeeper</artifactId>
-        <version>${global.version}</version>
+        <version>5.10.0-SNAPSHOT</version>
         <relativePath>../ru.taximaxim.codeKeeper/</relativePath>
     </parent>
   
