--- a/ru.taximaxim.codekeeper.mainapp/product/rcp/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/product/rcp/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>ru.taximaxim.codeKeeper</artifactId>
         <groupId>ru.taximaxim.codeKeeper</groupId>
-        <version>${global.version}</version>
+        <version>5.10.0-SNAPSHOT</version>
         <relativePath>../../ru.taximaxim.codeKeeper/</relativePath>
     </parent>
 
