--- a/ru.taximaxim.codekeeper.mainapp/product/standalone/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/product/standalone/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>ru.taximaxim.codeKeeper</artifactId>
         <groupId>ru.taximaxim.codeKeeper</groupId>
-        <version>${global.version}</version>
+        <version>5.10.0-SNAPSHOT</version>
         <relativePath>../../ru.taximaxim.codeKeeper/</relativePath>
     </parent>
 
@@ -33,7 +33,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>3.0.2</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>copy-resources-all</id>
@@ -42,11 +42,10 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.basedir}/target/products/ru.taximaxim.codekeeper.standalone.product/linux/gtk/x86_64</outputDirectory>
+                            <outputDirectory>${project.build.directory}/products/ru.taximaxim.codekeeper.standalone.product/linux/gtk/x86_64</outputDirectory>
                             <resources>
                                 <resource>
                                     <directory>${project.basedir}</directory>
-                                    <filtering>true</filtering>
                                     <includes>
                                         <include>pgcodekeeper-cli.*</include>
                                     </includes>
@@ -59,7 +58,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>set-executable</id>
@@ -70,7 +69,7 @@
                         <configuration>
                             <target>
                                 <chmod
-                                    file="${project.basedir}/target/products/ru.taximaxim.codekeeper.standalone.product/linux/gtk/x86_64/pgcodekeeper-cli.sh"
+                                    file="${project.build.directory}/products/ru.taximaxim.codekeeper.standalone.product/linux/gtk/x86_64/pgcodekeeper-cli.sh"
                                     perm="0775" />
                             </target>
                         </configuration>
@@ -107,13 +106,13 @@
                 <executions>
                     <execution>
                         <id>rename-file</id>
-                        <phase>install</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>rename</goal>
                         </goals>
                         <configuration>
-                            <sourceFile>${project.basedir}/target/products/${archive-filename}-linux.gtk.x86_64.zip</sourceFile>
-                            <destinationFile>${project.basedir}/target/products/${archive-filename}.zip</destinationFile>
+                            <sourceFile>${project.build.directory}/products/${archive-filename}-linux.gtk.x86_64.zip</sourceFile>
+                            <destinationFile>${project.build.directory}/products/${archive-filename}.zip</destinationFile>
                         </configuration>
                     </execution>
                 </executions>
