--- a/ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/pom.xml
@@ -5,35 +5,14 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 <!--
-файлы версионирования:
-
-~~~~~~~~ DEPRECATED ~~~~~~~~
-Use /script/update-version.sh NEW-VERSION
-to update all relevant poms and metadatas
-
-    фича:
-    feature/feature.xml
-    feature/pom.xml
-    
-    branding plugin:
-    META-INF/MANIFEST.MF
-    pom.xml
-    
-    product (стендэлон апгдифф):
-    product/*.product
-    product/pom.xml
-    
-    update site:
-    updatesite/pom.xml
-    
-    this file:
-    property 'global.version' (also updated by the script)
- -->
+    Use /script/update-version.sh X.Y.Z
+    to update all relevant poms and metadatas
+-->
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.taximaxim.codeKeeper</groupId>
     <artifactId>ru.taximaxim.codeKeeper</artifactId>
-    <version>${global.version}</version>
+    <version>5.10.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>..</module>
@@ -47,20 +26,20 @@ to update all relevant poms and metadatas
         <module>../updatesite</module>
         <module>../product/rcp</module>
         <module>../product/standalone</module>
+        <module>../deploy</module>
     </modules>
 
     <properties>
-        <global.version>5.10.0-SNAPSHOT</global.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <tycho.version>1.7.0</tycho.version>
         <target.definition.file>app</target.definition.file>
 
         <sonar.language>java</sonar.language>
-        <sonar.java.binaries>${project.basedir}/target/classes</sonar.java.binaries>
+        <sonar.java.binaries>${project.build.directory}/classes</sonar.java.binaries>
         <sonar.java.source>1.8</sonar.java.source>
         <sonar.core.coveragePlugin>jacoco</sonar.core.coveragePlugin>
-        <sonar.junit.reportPath>${project.basedir}/target/surefire-reports/</sonar.junit.reportPath>
+        <sonar.junit.reportPath>${project.build.directory}/surefire-reports/</sonar.junit.reportPath>
     </properties>
 
     <profiles>
@@ -71,7 +50,7 @@ to update all relevant poms and metadatas
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.7.9</version>
+                        <version>0.8.5</version>
                         <configuration>
                             <!-- задать при запуске мавена -->
                             <destFile>${sonar.jacoco.reportPaths}</destFile>
@@ -88,45 +67,12 @@ to update all relevant poms and metadatas
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <version>2.22.2</version>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-report-plugin</artifactId>
-                        <version>2.19.1</version>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>deploy-product-github</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.ragedunicorn.tools.maven</groupId>
-                        <artifactId>github-release-maven-plugin</artifactId>
-                        <version>1.0.1</version>
-                        <executions>
-                            <execution>
-                                <phase>deploy</phase>
-                                <goals>
-                                    <goal>github-release</goal>
-                                </goals>
-                                <configuration>
-                                    <owner>pgcodekeeper</owner>
-                                    <repository>pgcodekeeper</repository>
-                                    <authToken>${env.GITHUB_TOKEN}</authToken>
-                                    <tagName>v${unqualifiedVersion}</tagName>
-                                    <name>pgCodeKeeper ${unqualifiedVersion}</name>
-                                    <assets>
-                                        <asset>../product/stanalone/target/products/pgCodeKeeper-cli-${unqualifiedVersion}.zip</asset>
-                                        <asset>../product/rcp/target/products/pgCodeKeeper-${unqualifiedVersion}-win32.win32.x86_64.zip</asset>
-                                        <asset>../product/rcp/target/products/pgCodeKeeper-${unqualifiedVersion}-linux.gtk.x86_64.tar.gz</asset>
-                                        <asset>../product/rcp/target/products/pgCodeKeeper-${unqualifiedVersion}-macosx.cocoa.x86_64.tar.gz</asset>
-                                    </assets>
-                                </configuration>
-                            </execution>
-                        </executions>
+                        <version>2.22.2</version>
                     </plugin>
                 </plugins>
             </build>
@@ -181,7 +127,7 @@ to update all relevant poms and metadatas
                         <artifact>
                             <groupId>ru.taximaxim.codeKeeper</groupId>
                             <artifactId>ru.taximaxim.codeKeeper</artifactId>
-                            <version>${global.version}</version>
+                            <version>5.10.0-SNAPSHOT</version>
                             <classifier>../${target.definition.file}</classifier>
                         </artifact>
                     </target>
@@ -206,24 +152,39 @@ to update all relevant poms and metadatas
                     </dependency-resolution>
                 </configuration>
             </plugin>
-            
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <executions>
-                    <execution>
-                        <id>default-deploy</id>
-                        <phase>none</phase>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <!-- disable default install and deploy goals globally -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>default-install</id>
+                            <phase>none</phase>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>default-deploy</id>
+                            <phase>none</phase>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <extensions>
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-ssh</artifactId>
-                <version>2.12</version>
+                <version>3.4.1</version>
             </extension>
         </extensions>
     </build>
