--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,4 +19,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -B verify -P !internal --file ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/pom.xml
+      run: mvn -B verify --file pom.xml
