--- a/apgdiff/pom.xml
+++ b/apgdiff/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>ru.taximaxim.codeKeeper</groupId>
         <artifactId>ru.taximaxim.codeKeeper</artifactId>
-        <version>5.10.5-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/</relativePath>
     </parent>
 
