--- a/ru.taximaxim.codekeeper.mainapp/deploy/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/deploy/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>ru.taximaxim.codeKeeper</artifactId>
         <groupId>ru.taximaxim.codeKeeper</groupId>
-        <version>5.10.5-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../ru.taximaxim.codeKeeper/</relativePath>
     </parent>
 
