--- a/ru.taximaxim.codekeeper.mainapp/feature/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/feature/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <groupId>ru.taximaxim.codeKeeper</groupId>
         <artifactId>ru.taximaxim.codeKeeper</artifactId>
-        <version>5.10.5-SNAPSHOT</version>
+        <version>${revision}</version>
         <relativePath>../ru.taximaxim.codeKeeper/</relativePath>
     </parent>
   
     <groupId>ru.taximaxim.codeKeeper</groupId>
     <artifactId>ru.taximaxim.codekeeper.feature</artifactId>
+    <version>5.10.5-SNAPSHOT</version>
     <packaging>eclipse-feature</packaging>
 </project>
