--- a/ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/ru.taximaxim.codeKeeper/pom.xml
@@ -12,7 +12,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.taximaxim.codeKeeper</groupId>
     <artifactId>ru.taximaxim.codeKeeper</artifactId>
-    <version>5.10.5-SNAPSHOT</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
     <modules>
         <module>..</module>
@@ -30,6 +30,8 @@
     </modules>
 
     <properties>
+        <revision>5.10.5-SNAPSHOT</revision>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <tycho.version>1.7.0</tycho.version>
@@ -127,7 +129,7 @@
                         <artifact>
                             <groupId>ru.taximaxim.codeKeeper</groupId>
                             <artifactId>ru.taximaxim.codeKeeper</artifactId>
-                            <version>5.10.5-SNAPSHOT</version>
+                            <version>${revision}</version>
                             <classifier>../${target.definition.file}</classifier>
                         </artifact>
                     </target>
