--- a/ru.taximaxim.codekeeper.mainapp/product/rcp/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/product/rcp/pom.xml
@@ -62,6 +62,9 @@
                     <products>
                         <product>
                             <id>ru.taximaxim.codekeeper.rcp.product</id>
+                             <rootFolders>
+                                 <macosx>pgCodeKeeper.app</macosx>
+                             </rootFolders>
                             <archiveFileName>pgCodeKeeper-${unqualifiedVersion}</archiveFileName>
                         </product>
                     </products>
