Decorator, status bar,new icons
Delete "Apply to" control's title.

Add information text in status bar.

Change "Get Changes", "Open New Sql editor" icons.

Add decorator in "Apply to" control.

--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -392,7 +392,7 @@
                 </separator>
                 <command
                     commandId="ru.taximaxim.codekeeper.ui.command.OpenSQLEditor"
-                    icon="IMG_OBJ_FILE"
+                    icon="icons/menu_new_sql_file.png"
                     label="%command.commandname.OpenSQLEditor"
                     style="push">
                 </command>
@@ -528,7 +528,7 @@
                 </control>
                 <command
                     commandId="ru.taximaxim.codekeeper.ui.command.OpenSQLEditor"
-                    icon="IMG_OBJ_FILE"
+                    icon="icons/new_sql_file.png"
                     label="%command.commandname.OpenSQLEditor"
                     style="push">
                     <visibleWhen>
