Added support for filtering schemes when loading from the Project; added tests for filtering schemes.
Added CliArgs for loading ignored schemas lists.

Changed Ignored Schemas prefPage from preferences into properties page.

--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -867,7 +867,7 @@
         </page>
         <page
             category="ru.taximaxim.codekeeper.ui.proj_properties"
-            class="ru.taximaxim.codekeeper.ui.prefs.ignoredobjects.IgnoredSchemasPrefPage"
+            class="ru.taximaxim.codekeeper.ui.properties.IgnoredSchemasProperties"
             id="ru.taximaxim.codekeeper.ui.ignored_schema"
             name="%page.name.ignored_schema">
             <enabledWhen>
