Added supporting FDW and SERVER objects
Added PgForeignOptionContainer, PgSimpleOptionContainer interface, refactored LibraryContainer

--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
@@ -43,6 +43,10 @@ create.type4.desc = CREATE TYPE statement (base data type)
 
 create.view.desc = CREATE VIEW statement
 
+create.foreign_data_wrapper.desc = CREATE FOREIGN DATA WRAPPER statement
+
+create.server.desc = CREATE SERVER statement
+
 decode.desc = DECODE function
 
 drop.rule.desc = DROP RULE statement
