Added supporting Server and FDW in UI.
Added spaces in statement in PgForeignDataWrapper.

--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
@@ -43,6 +43,8 @@ create.type4.desc = CREATE TYPE statement (base data type)
 
 create.view.desc = CREATE VIEW statement
 
+create.extension.desc = CREATE EXTENSION statement
+
 create.foreign_data_wrapper.desc = CREATE FOREIGN DATA WRAPPER statement
 
 create.server.desc = CREATE SERVER statement
