--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,8 @@
         <profile>
             <id>internal</id>
             <modules>
-                <module>../../../codekeeper-internal/ru.taximaxim.codekeeper.internal.tests</module>
-                <module>../../../codekeeper-internal/ru.taximaxim.codekeeper.internal.ui.tests</module>
+                <module>../codekeeper-internal/ru.taximaxim.codekeeper.internal.tests</module>
+                <module>../codekeeper-internal/ru.taximaxim.codekeeper.internal.ui.tests</module>
             </modules>
         </profile>
         <profile>
