--- a/apgdiff/build.properties
+++ b/apgdiff/build.properties
@@ -1,7 +1,9 @@
 source.. = src/main/java/,\
-           src/main/resources/
+           src/main/resources/,\
+           target/generated-sources/antlr4/
 bin.includes = META-INF/,\
                .,\
+               target/generated-sources/antlr4/,\
                lib/jgrapht-core-0.9.0.jar,\
                OSGI-INF/,\
                about.html,\
@@ -9,4 +11,3 @@ bin.includes = META-INF/,\
                lib/postgresql-42.2.5.jar,\
                lib/PgPass-0.0.2.jar,\
                lib/mssql-jdbc-7.4.1.jre8.jar
-
