--- a/apgdiff/pom.xml
+++ b/apgdiff/pom.xml
@@ -30,8 +30,9 @@
                 <configuration>
                     <visitor>false</visitor>
                     <listener>false</listener>
+                    <treatWarningsAsErrors>true</treatWarningsAsErrors>
                     <sourceDirectory>${project.basedir}/antlr-src</sourceDirectory>
-                    <outputDirectory>${project.basedir}/src/main/java/cz/startnet/utils/pgdiff/parsers/antlr</outputDirectory>
+                    <outputDirectory>${project.build.directory}/generated-sources/antlr4/cz/startnet/utils/pgdiff/parsers/antlr</outputDirectory>
                 </configuration>
                 <executions>
                     <execution>
