--- a/apgdiff/.classpath
+++ b/apgdiff/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/jgrapht-core-0.9.0.jar" sourcepath="lib/jgrapht-core-0.9.0-sources.jar"/>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="target/generated-sources/antlr4"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/mssql-jdbc-7.4.1.jre8.jar" sourcepath="lib/mssql-jdbc-7.4.1.jre8-sources.jar"/>
