--- a/apgdiff/.classpath
+++ b/apgdiff/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/antlr-runtime-4.6.jar" sourcepath="lib/antlr-runtime-4.6-sources.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/antlr4-runtime-4.9.3.jar" sourcepath="lib/antlr4-runtime-4.9.3-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="lib/jgrapht-core-1.4.0.jar" sourcepath="lib/jgrapht-core-1.4.0-sources.jar"/>
 	<classpathentry kind="src" path="src/main/java"/>
