Added supporting of user mapping object
Added tests for user mapping object

Fixed server's and fdw's compare method

Replace addOption() with fillOptionParams() in CreateFdw, CreateServer

--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
@@ -47,6 +47,8 @@ create.extension.desc = CREATE EXTENSION statement
 
 create.foreign_data_wrapper.desc = CREATE FOREIGN DATA WRAPPER statement
 
+create.user_mapping.desc = CREATE USER MAPPING statement
+
 create.server.desc = CREATE SERVER statement
 
 decode.desc = DECODE function
