make toolbar DbMenuStorePicker constant width

--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -521,6 +521,10 @@
                         </with>
                     </visibleWhen>
                 </control>
+                <separator
+                      name="ru.taximaxim.codekeeper.ui.separator2"
+                      visible="true">
+                </separator>
                 <command
                     commandId="ru.taximaxim.codekeeper.ui.command.OpenSQLEditor"
                     icon="icons/new_sql_file.png"
