Revert "deleted feedback command label from pgCodeKeeper drop-down menu"
This reverts commit aa1e9ba0245777a06bcdb27c3343117d18686764.

--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -405,6 +405,12 @@
                     style="push">
                 </command>
                 <command
+                    commandId="ru.taximaxim.codekeeper.ui.feedBack"
+                    label="%command.label.feedback"
+                    mnemonic="%command.mnemonic.feedback"
+                    style="push">
+                </command>
+                <command
                     commandId="ru.taximaxim.codekeeper.ui.command.OpenDocs"
                     label="%command.label.openDocs"
                     style="push">
