fixed tests from eclipse

--- a/ru.taximaxim.codekeeper.cli.tests/build.properties
+++ b/ru.taximaxim.codekeeper.cli.tests/build.properties
@@ -4,3 +4,6 @@ output.. = target/
 bin.includes = META-INF/,\
                .,\
                resources/
+additional.bundles = org.junit.platform.engine,\
+                     org.junit.jupiter.engine,\
+                     junit-platform-commons
