--- a/ru.taximaxim.codekeeper.core.tests/build.properties
+++ b/ru.taximaxim.codekeeper.core.tests/build.properties
@@ -6,3 +6,6 @@ bin.includes = META-INF/,\
                lib/picocontainer-2.14.jar,\
                lib/joda-time-2.7.jar,\
                lib/slf4j-api-1.7.13.jar
+additional.bundles = org.junit.platform.engine,\
+                     org.junit.jupiter.engine,\
+                     junit-platform-commons
