removed jar files

--- a/ru.taximaxim.codekeeper.cli.tests/build.properties
+++ b/ru.taximaxim.codekeeper.cli.tests/build.properties
@@ -6,4 +6,4 @@ bin.includes = META-INF/,\
                resources/
 additional.bundles = org.junit.platform.engine,\
                      org.junit.jupiter.engine,\
-                     junit-platform-commons
+                     org.junit.platform.commons
