--- a/ru.taximaxim.codekeeper.core.tests/build.properties
+++ b/ru.taximaxim.codekeeper.core.tests/build.properties
@@ -1,11 +1,7 @@
 source.. = src/main/java/,\
            src/main/resources/
 bin.includes = META-INF/,\
-               .,\
-               lib/javers-core-1.1.1.jar,\
-               lib/picocontainer-2.14.jar,\
-               lib/joda-time-2.7.jar,\
-               lib/slf4j-api-1.7.13.jar
+               .
 additional.bundles = org.junit.platform.engine,\
                      org.junit.jupiter.engine,\
-                     junit-platform-commons
+                     org.junit.platform.commons
