--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -141,7 +141,7 @@
         <command
               categoryId="ru.taximaxim.codekeeper.ui.categoryPgCodeKeeper"
               defaultHandler="ru.taximaxim.codekeeper.ui.handlers.AddComment"
-              id="ru.taximaxim.codekeeper.ui.AddComment"
+              id="ru.taximaxim.codekeeper.ui.command.AddComment"
               name="%command.commandname.AddComment">
         </command>
     </extension>
@@ -572,8 +572,13 @@
             </command>
             <command commandId="ru.taximaxim.codekeeper.ui.command.Format">
             </command>
-            <command commandId="ru.taximaxim.codekeeper.ui.command.AddComment">
+            <command 
+                commandId="ru.taximaxim.codekeeper.ui.command.AddComment">
+                <visibleWhen
+                     checkEnabled="true">
+               </visibleWhen>
             </command>
+            
         </menuContribution>
         <menuContribution locationURI="popup:org.eclipse.ui.projectConfigure?after=additions">
             <command
