added locale, code clean up

--- a/ru.taximaxim.codekeeper.ui.tests/build.properties
+++ b/ru.taximaxim.codekeeper.ui.tests/build.properties
@@ -5,3 +5,6 @@ bin.includes = META-INF/,\
                resources/
 jars.compile.order = .
 jars.extra.classpath = platform:/fragment/ru.taximaxim.codekeeper.core.tests
+additional.bundles = org.junit.platform.engine,\
+                     org.junit.jupiter.engine,\
+                     org.junit.platform.commons
