--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
         <sonar.java.target>11</sonar.java.target>
         <sonar.core.coveragePlugin>jacoco</sonar.core.coveragePlugin>
         <sonar.junit.reportPath>${project.build.directory}/surefire-reports/</sonar.junit.reportPath>
+
+        <keystore>/etc/keystore.jks</keystore>
     </properties>
 
     <profiles>
@@ -51,6 +53,33 @@
             <properties>
                 <target.definition.file>app_202103</target.definition.file>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jarsigner-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <configuration>
+                            <keystore>${keystore}</keystore>
+                            <alias>pgCodeKeeper</alias>
+                            <storepass>pgCodeKeeper</storepass>
+                            <keypass>pgCodeKeeper</keypass>
+                            <arguments>
+                                <argument>-sigalg</argument>
+                                <argument>SHA512withRSA</argument>
+                            </arguments>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>sign</id>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>internal</id>
