--- a/ru.taximaxim.codekeeper.mainapp/product/rcp/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/product/rcp/pom.xml
@@ -18,7 +18,7 @@
     <repositories>
         <repository>
             <id>eclipse-p2-repo</id>
-            <url>https://download.eclipse.org/releases/latest/</url>
+            <url>https://download.eclipse.org/releases/2023-03/</url>
             <layout>p2</layout>
         </repository>
     </repositories>
