--- a/ru.taximaxim.codekeeper.mainapp/product/standalone/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/product/standalone/pom.xml
@@ -19,17 +19,15 @@
     <properties>
         <archive-filename>pgCodeKeeper-cli-${unqualifiedVersion}</archive-filename>
     </properties>
-<!-- 
-  - latest is incompatible with Java 8 which is still our minimal requirement
-  - uncomment when Java dependency will be bumped
+
     <repositories>
         <repository>
             <id>eclipse-p2-repo</id>
-            <url>https://download.eclipse.org/releases/latest/</url>
+            <url>https://download.eclipse.org/releases/2023-03/</url>
             <layout>p2</layout>
         </repository>
     </repositories>
- -->
+
     <build>
         <plugins>
             <plugin>
