PGCK-21 configured logger for CLI, little fixes

--- a/ru.taximaxim.codekeeper.cli/build.properties
+++ b/ru.taximaxim.codekeeper.cli/build.properties
@@ -3,4 +3,5 @@ output.. = target/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               plugin.xml
+               plugin.xml,\
+               logback.xml
