--- a/ru.taximaxim.codekeeper.mainapp/deploy/pom.xml
+++ b/ru.taximaxim.codekeeper.mainapp/deploy/pom.xml
@@ -47,7 +47,10 @@
                                     <assets>
                                         <asset>${product-dir}/rcp/target/products/pgCodeKeeper-${unqualifiedVersion}-win32.win32.x86_64.zip</asset>
                                         <asset>${product-dir}/rcp/target/products/pgCodeKeeper-${unqualifiedVersion}-linux.gtk.x86_64.tar.gz</asset>
+                                        <!-- -
+                                        <asset>${product-dir}/rcp/target/products/pgCodeKeeper-${unqualifiedVersion}-macosx.cocoa.aarch64.tar.gz</asset>
                                         <asset>${product-dir}/rcp/target/products/pgCodeKeeper-${unqualifiedVersion}-macosx.cocoa.x86_64.tar.gz</asset>
+                                        <!- -->
                                         <asset>${product-dir}/standalone/target/products/pgCodeKeeper-cli-${unqualifiedVersion}.zip</asset>
                                         <asset>${updatesite-dir}/pgCodeKeeper-updatesite-${unqualifiedVersion}.zip</asset>
                                     </assets>
