--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>ru.taximaxim.codekeeper.cli</module>
         <module>ru.taximaxim.codekeeper.cli.tests</module>
         <module>ru.taximaxim.codekeeper.mainapp</module>
+        <module>ru.taximaxim.codekeeper.mainapp/report</module>
         <module>ru.taximaxim.codekeeper.mainapp/feature</module>
         <module>ru.taximaxim.codekeeper.mainapp/updatesite</module>
         <module>ru.taximaxim.codekeeper.mainapp/product/rcp</module>
@@ -37,6 +38,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <tycho.version>2.7.5</tycho.version>
         <jacoco.version>0.8.10</jacoco.version>
+        <maven.surefire.version>2.22.2</maven.surefire.version>
         <target.definition.file>app</target.definition.file>
 
         <sonar.language>java</sonar.language>
@@ -105,21 +107,15 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.22.2</version>
+                        <version>${maven.surefire.version}</version>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-report-plugin</artifactId>
-                        <version>2.22.2</version>
+                        <version>${maven.surefire.version}</version>
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <id>internal</id>
-            <modules>
-                <module>../codekeeper-internal/ru.taximaxim.codekeeper.internal.tests</module>
-            </modules>
         </profile>
         <profile>
             <id>compat_check</id>
@@ -190,7 +186,7 @@
                     </environments>
                     <dependency-resolution>
                         <!-- workaround for split package import
-                             allows apgdiff to not require any bundles -->
+                             allows core to not require any bundles -->
                         <extraRequirements>
                             <requirement>
                                 <type>eclipse-plugin</type>
