allowed to edit protected templates, fixed descriptions

--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
@@ -1,60 +1,41 @@
 
-alter.owner.desc = ALTER OWNER statement
-
-alter.rule.desc = ALTER RULE statement
-
+alter.owner.desc   = ALTER OWNER statement
+alter.rule.desc    = ALTER RULE statement
 alter.trigger.desc = ALTER TRIGGER statement
 
-comment.desc = COMMENT ON type name IS 'text'
+comment.desc  = COMMENT ON type name IS 'text'
 
 comment2.desc = COMMENT ON type name ON tableName IS 'text'
 
-create.domain.desc = CREATE DOMAIN statement
-
-create.index.desc = CREATE INDEX statement
-
-create.fts_configuration.desc = CREATE FTS_CONFIGURATION statement
-
-create.fts_dictionary.desc = CREATE FTS_DICTIONARY statement
-
-create.fts_parser.desc = CREATE FTS_PARSER statement
-
-create.fts_template.desc = CREATE FTS_TEMPLATE statement
-
-create.function.desc = CREATE FUNCTION statement
-
-create.procedure.desc = CREATE PROCEDURE statement
-
-create.rule.desc = CREATE RULE statement
-
-create.sequence.desc = CREATE SEQUENCE statement
-
-create.table.desc = CREATE TABLE statement
-
-create.trigger.desc = CREATE TRIGGER statement
-
-create.type.desc = CREATE TYPE statement (composite)
-
-create.type2.desc = CREATE TYPE statement (enumerated)
-
-create.type3.desc = CREATE TYPE statement (range)
-
-create.type4.desc = CREATE TYPE statement (base data type)
-
-create.view.desc = CREATE VIEW statement
-
-create.extension.desc = CREATE EXTENSION statement
-
+create.aggregate.desc            = CREATE DOMAIN statement
+create.collation.desc            = CREATE COLLATION statement
+create.domain.desc               = CREATE DOMAIN statement
+create.event_trigger.desc        = CREATE EVENT TRIGGER statement
+create.extension.desc            = CREATE EXTENSION statement
 create.foreign_data_wrapper.desc = CREATE FOREIGN DATA WRAPPER statement
-
-create.user_mapping.desc = CREATE USER MAPPING statement
-
-create.server.desc = CREATE SERVER statement
+create.fts_configuration.desc    = CREATE FTS_CONFIGURATION statement
+create.fts_dictionary.desc       = CREATE FTS_DICTIONARY statement
+create.fts_parser.desc           = CREATE FTS_PARSER statement
+create.fts_template.desc         = CREATE FTS_TEMPLATE statement
+create.function.desc             = CREATE FUNCTION statement
+create.index.desc                = CREATE INDEX statement
+create.policy.desc               = CREATE POLICY statement
+create.procedure.desc            = CREATE PROCEDURE statement
+create.rule.desc                 = CREATE RULE statement
+create.sequence.desc             = CREATE SEQUENCE statement
+create.server.desc               = CREATE SERVER statement
+create.table.desc                = CREATE TABLE statement
+create.trigger.desc              = CREATE TRIGGER statement
+create.type.desc                 = CREATE TYPE statement (composite)
+create.type2.desc                = CREATE TYPE statement (enumerated)
+create.type3.desc                = CREATE TYPE statement (range)
+create.type4.desc                = CREATE TYPE statement (base data type)
+create.user_mapping.desc         = CREATE USER MAPPING statement
+create.view.desc                 = CREATE VIEW statement
 
 decode.desc = DECODE function
 
-drop.rule.desc = DROP RULE statement
-
+drop.rule.desc    = DROP RULE statement
 drop.trigger.desc = DROP TRIGGER statement
 
 encode.desc = ENCODE function
