--- a/ru.taximaxim.codekeeper.ui/plugin.xml
+++ b/ru.taximaxim.codekeeper.ui/plugin.xml
@@ -747,14 +747,6 @@
         </wizard>
         <wizard
             category="ru.taximaxim.codekeeper.ui.pgcodekeepercategory"
-            class="ru.taximaxim.codekeeper.ui.pgdbproject.NewProjWizard"
-            icon="icons/app_icon16.png"
-            id="ru.taximaxim.codekeeper.ui.newmsprojwizard"
-            name="%wizard.name.keeperNewMsWizard"
-            project="true">
-        </wizard>
-        <wizard
-            category="ru.taximaxim.codekeeper.ui.pgcodekeepercategory"
             class="ru.taximaxim.codekeeper.ui.pgdbproject.NewObjectWizard"
             icon="icons/pgadmin/database.png"
             id="ru.taximaxim.codekeeper.ui.newobjwizard"
@@ -798,6 +790,16 @@
     </extension>
     <extension
         id="ru.taximaxim.codekeeper.ui.msnature"
+        point="org.eclipse.core.resources.natures">
+        <runtime>
+            <run class="ru.taximaxim.codekeeper.ui.natures.ProjectNature">
+            </run>
+        </runtime>
+        <builder id="ru.taximaxim.codekeeper.ui.builder">
+        </builder>
+    </extension>
+    <extension
+        id="ru.taximaxim.codekeeper.ui.chnature"
         point="org.eclipse.core.resources.natures">
         <runtime>
             <run class="ru.taximaxim.codekeeper.ui.natures.ProjectNature">
