PGCK-274 fixed connection

--- a/ru.taximaxim.codekeeper.core/build.properties
+++ b/ru.taximaxim.codekeeper.core/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                .,\
                target/generated-sources/antlr4/,\
                OSGI-INF/,\
-               about.html
+               about.html,\
+               libs/
