PGCK-368 added STATISTICS object support

--- a/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
+++ b/ru.taximaxim.codekeeper.ui/sql_templates/sqlTemplatePg.properties
@@ -24,6 +24,7 @@ create.procedure.desc            = CREATE PROCEDURE statement
 create.rule.desc                 = CREATE RULE statement
 create.sequence.desc             = CREATE SEQUENCE statement
 create.server.desc               = CREATE SERVER statement
+create.statistics.desc           = CREATE STATISTICS statement
 create.table.desc                = CREATE TABLE statement
 create.trigger.desc              = CREATE TRIGGER statement
 create.type.desc                 = CREATE TYPE statement (composite)
